[package]
name = "nokos"
version = "0.1.0"
authors = ["Khdbble <fb503d52.af1c4d@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
