[package]
name = "nokos"
version = "0.1.0"
authors = ["Khdbble <fb503d52.af1c4d@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300 # (in seconds)

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"
uart_16550 = "0.2.0" # Serial port; to print test result to host console

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
