[package]
name = "nokos"
version = "0.1.0"
authors = ["plokiy <fb503d52.af1c4d@gmail.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.13.2"
uart_16550 = "0.2.0" # Serial port; to print test result to host console
pic8259_simple = "0.2.0" # PIC; for hardware interrupts
pc-keyboard = "0.5.0"
linked_list_allocator = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300 # (in seconds)

